crates/ic-lint/tests/snapshots/void_ty__mixed_valid_invalid_void.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
error[void-ty]: `void` is only allowed as a return type in prototypes
    ┌ test.idl:7:27
    │
  4 │     void validVoidReturn();
  5 │ 
  6 │     // Invalid uses of void
  7 │     void invalidMethod(in void param);
    ·                           ^^^^ invalid use of `void`
  8 │ 
  9 │     // Valid non-void method
 10 │     long calculate(in long x, in long y);
    └──

error[void-ty]: `void` is only allowed as a return type in prototypes
    ┌ test.idl:14:5
    │
 11 │ };
 12 │ 
 13 │ struct MixedStruct {
 14 │     void invalidField;
    ·     ^^^^ invalid use of `void`
 15 │     long validField;
 16 │ };
    └──
