crates/ic-lint/tests/snapshots/void_ty__void_as_parameter_type.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:3:25
   │
 3 │     void processVoid(in void param);
   ·                         ^^^^ invalid use of `void`
   └──

error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:4:23
   │
 4 │     long calculate(in void input, out void output);
   ·                       ^^^^ invalid use of `void`
   └──

error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:4:39
   │
 4 │     long calculate(in void input, out void output);
   ·                                       ^^^^ invalid use of `void`
   └──
