crates/ic-lint/tests/snapshots/void_ty__void_in_array.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:3:5
   │
 2 │ struct ArrayStruct {
 3 │     void invalidArray[10];
   ·     ^^^^ invalid use of `void`
 4 │ };
 5 │ 
 6 │ typedef void VoidArray[5];
   └──

error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:6:9
   │
 3 │     void invalidArray[10];
 4 │ };
 5 │ 
 6 │ typedef void VoidArray[5];
   ·         ^^^^ invalid use of `void`
   └──
