crates/ic-lint/tests/snapshots/void_ty__void_in_const.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:2:7
   │
 2 │ const void INVALID_CONST = 0;
   ·       ^^^^ invalid use of `void`
   └──
