crates/ic-lint/tests/snapshots/void_ty__void_in_exception_member.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:3:5

 2 │ exception InvalidException {
 3 │     void errorField;
   │     ˆˆˆˆ invalid use of `void`
 4 │     string message;
 5 │ };
