crates/ic-lint/tests/snapshots/void_ty__void_in_nested_types.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:3:23

 2 │ struct NestedInvalid {
 3 │     sequence<sequence<void>> deeplyNested;
   │                       ˆˆˆˆ invalid use of `void`
 4 │     map<string, sequence<void>> mapOfVoidSeq;
 5 │ };

⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:4:26

 2 │ struct NestedInvalid {
 3 │     sequence<sequence<void>> deeplyNested;
 4 │     map<string, sequence<void>> mapOfVoidSeq;
   │                          ˆˆˆˆ invalid use of `void`
 5 │ };

⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:12:33

 11 │     // Invalid void in nested parameter type
 12 │     void handleData(in sequence<void> data);
    │                                 ˆˆˆˆ invalid use of `void`
 13 │ };
