crates/ic-lint/tests/snapshots/void_ty__void_in_sequence.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:3:14

 2 │ struct SequenceStruct {
 3 │     sequence<void> voidSeq;
   │              ˆˆˆˆ invalid use of `void`
 4 │     sequence<sequence<void>> nestedVoidSeq;
 5 │ };

⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:4:23

 2 │ struct SequenceStruct {
 3 │     sequence<void> voidSeq;
 4 │     sequence<sequence<void>> nestedVoidSeq;
   │                       ˆˆˆˆ invalid use of `void`
 5 │ };
