crates/ic-lint/tests/snapshots/void_ty__void_in_struct_member.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:3:5
   │
 3 │     void invalidField;
   ·     ^^^^ invalid use of `void`
   └──

error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:5:5
   │
 5 │     void anotherInvalid;
   ·     ^^^^ invalid use of `void`
   └──
