crates/ic-lint/tests/snapshots/void_ty__void_in_typedef.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
error[void_ty]: `void` is only allowed as a return type in prototypes
   ┌ test.idl:2:9
   │
 2 │ typedef void VoidAlias;
   ·         ^^^^ invalid use of `void`
   └──
