crates/ic-lint/tests/snapshots/void_ty__void_in_union_variant.snap
---
source: crates/ic-lint/tests/void_ty.rs
expression: test_lint_hir(source)
---
⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:3:13

 2 │ union InvalidUnion switch (long) {
 3 │     case 1: void voidVariant;
   │             ˆˆˆˆ invalid use of `void`
 4 │     case 2: string stringVariant;
 5 │     case 3: void anotherVoid;

⨯ void-ty: `void` is only allowed as a return type in prototypes
  @ test.idl:5:13

 3 │     case 1: void voidVariant;
 4 │     case 2: string stringVariant;
 5 │     case 3: void anotherVoid;
   │             ˆˆˆˆ invalid use of `void`
 6 │ };
